scss fix index title vertical align

--- a/app/Resources/sass/common/common.scss
+++ b/app/Resources/sass/common/common.scss
@@ -26,12 +26,6 @@ a {
 	}
 }
 
-.navbar-brand {
-	font-family: Shadows Into Light Two;
-	text-wrap: none;
-	font-size: 35px;
-}
-
 // tablet & smart phone
 @media (max-width: 47.9em) {
 	.pc-only {
